--- a/app/src/main/res/layout/users_display_layout.xml
+++ b/app/src/main/res/layout/users_display_layout.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15sp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:ignore="UselessParent">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/friend_img"
@@ -26,29 +28,26 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:ignore="UselessParent">
 
                 <TextView
                     android:id="@+id/friend_username"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_alignParentRight="true"
-                    android:text="username"
+                    android:text="@string/username"
                     android:fontFamily="@font/freedoka"
                     android:textSize="20sp"
-                    android:textColor="@color/colorAccentYellow"
-                    android:layout_alignLeft="@id/friend_img" />
+                    android:textColor="@color/colorAccentYellow" />
 
                 <TextView
                     android:id="@+id/friend_status"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:text="userstatus"
+                    android:text="@string/user_status"
                     android:fontFamily="@font/freedoka"
                     android:textSize="17sp"
-                    android:textColor="@color/colorAccentYellow"
-                    android:layout_alignLeft="@id/friend_img" />
+                    android:textColor="@color/colorAccentYellow" />
             </LinearLayout>
 
         </LinearLayout>
