--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -6,13 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ContactsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contacts Fragment"
-        android:layout_centerInParent="true"
-        android:textSize="30sp"
-        android:fontFamily="@font/freedoka" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/contacts_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/users_display_layout"
+        />
 
 </RelativeLayout>
