--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,54 +5,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/group_chat_layout"
-    tools:context=".GroupChatActivity">
+    tools:context=".ChatActivity">
 
     <include
-        android:id="@+id/group_chat_bar_layout"
+        android:id="@+id/chat_toolbar"
         layout="@layout/app_bar_layout" />
 
-    <ScrollView
-        android:id="@+id/my_scroll_view"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/private_messages_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/group_chat_bar_layout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_above="@id/my_linear_layout" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/group_chat_text_display"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20sp"
-                android:layout_marginBottom="60sp"
-                android:layout_marginLeft="20sp"
-                android:layout_marginRight="80sp"
-                android:padding="10sp"
-                android:textSize="20sp"
-                android:fontFamily="@font/freedoka"
-                android:textColor="@color/colorAccentYellow" />
-
-        </LinearLayout>
-    </ScrollView>
+        android:layout_below="@id/chat_toolbar"
+        android:layout_above="@id/chat_linear_layout"
+        android:layout_marginBottom="10sp"
+        tools:listitem="@layout/custom_messages_layout"
+        />
 
     <RelativeLayout
-        android:id="@+id/my_linear_layout"
+        android:id="@+id/chat_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/input_group_message"
+            android:id="@+id/input_private_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/type_message"
@@ -67,16 +45,15 @@
             android:layout_gravity="center_vertical"
             android:textColor="@color/colorAccentRedDark"
             android:textSize="18sp"
-            />
+            tools:ignore="NotSibling" />
 
         <ImageView
-            android:id="@+id/send_message_button"
+            android:id="@+id/send_private_message_button"
             android:layout_width="60sp"
             android:layout_height="60sp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="5sp"
-            android:src="@drawable/send_message"
-            />
+            android:src="@drawable/send_message" />
 
     </RelativeLayout>
 </RelativeLayout>
