--- a/app/src/main/res/layout/users_display_layout.xml
+++ b/app/src/main/res/layout/users_display_layout.xml
@@ -9,14 +9,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15sp"
+        android:layout_margin="10sp"
         android:orientation="horizontal"
         tools:ignore="UselessParent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/other_user_profile_image"
-            android:layout_width="80sp"
-            android:layout_height="80sp"
+            android:id="@+id/display_user_profile_image"
+            android:layout_width="90sp"
+            android:layout_height="90sp"
+            android:layout_marginTop="8sp"
+            android:layout_marginRight="5sp"
             android:src="@drawable/profile_image" />
 
         <LinearLayout
@@ -32,7 +34,7 @@
                 tools:ignore="UselessParent">
 
                 <TextView
-                    android:id="@+id/other_user_name"
+                    android:id="@+id/display_user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="@string/username"
@@ -41,15 +43,62 @@
                     android:textColor="@color/colorAccentYellow" />
 
                 <TextView
-                    android:id="@+id/other_user_status"
+                    android:id="@+id/display_user_status"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/user_status"
                     android:fontFamily="@font/freedoka"
                     android:textSize="17sp"
                     android:textColor="@color/colorAccentYellow" />
-            </LinearLayout>
 
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/your_request"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10sp"
+                        android:text="@string/you_send_the_request"
+                        android:textColor="#616267"
+                        android:fontFamily="@font/freedoka"
+                        android:textSize="18sp"
+                        android:visibility="invisible"
+                        />
+
+                    <LinearLayout
+                        android:id="@+id/request_action_buttons"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10sp"
+                        android:visibility="invisible"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/request_accept_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="40sp"
+                            android:text="@string/accept"
+                            android:background="@drawable/positive_button"
+                            android:textColor="@color/colorWhite"
+                            android:fontFamily="@font/freedoka"
+                            />
+
+                        <Button
+                            android:id="@+id/request_cancel_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="40sp"
+                            android:text="@string/cancel"
+                            android:layout_marginLeft="10sp"
+                            android:background="@drawable/negative_button"
+                            android:textColor="@color/colorWhite"
+                            android:fontFamily="@font/freedoka"
+                            />
+
+                    </LinearLayout>
+                </RelativeLayout>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
